[package]
name = "Rust-I2C-KM1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.16.1"
rand = "0.8.5"
byteorder = "1.4.3"
crossterm = "0.27.0"

[[bin]]
name = "Rust-I2C-KM1"
path = "main.rs"
