[package]
name = "I2C-KM1"
version = "0.1.0"
authors = ["Taisei Mogi <periscope.era@gmail.com>"]
edition = "2021"

keywords = ["motor","robotics","I2C"]
description = Keigan Motor KM1S motor control library using I2C for RaspberryPi.
categories = ["rppal"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rppal = "0.16.1"
rand = "0.8.5"
byteorder = "1.4.3"
crossterm = "0.27.0"

[[bin]]
name = "Rust-I2C-KM1"
path = "main.rs"
